[CL-653] Fix provider setup bg and vault filter truncation (#16018)

--- a/apps/web/src/scss/tailwind.css
+++ b/apps/web/src/scss/tailwind.css
@@ -49,6 +49,11 @@
     }
   }
 
+  body {
+    @apply tw-bg-background;
+    @apply tw-text-main;
+  }
+
   /**
    * Loading page
    */
